<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/empfirst1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/empfirst1"
        app:layout_constraintRight_toRightOf="parent"


        app:layout_constraintTop_toTopOf="@id/empfirst1" />

    <TextView
        android:id="@+id/empfirst2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/empfirst1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/empfirst1"
        app:layout_constraintTop_toBottomOf="@id/empfirst1" />

    <TextView
        android:id="@+id/emplast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/empsalary"
        app:layout_constraintLeft_toRightOf="@id/empfirst1"


        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empfirst" />

    <TextView
        android:id="@+id/empfirst3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/empfirst2"
        app:layout_constraintTop_toBottomOf="@id/empfirst2" />

    <TextView
        android:id="@+id/empsalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/empfirst2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/empfirst2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empsalary"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>